--- a/package.json
+++ b/package.json
@@ -10,25 +10,31 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.3",
+    "date-and-time": "^2.4.3",
     "expo": "~48.0.6",
+    "expo-camera": "~13.2.1",
+    "expo-file-system": "^15.2.2",
     "expo-font": "~11.1.1",
+    "expo-location": "~15.1.1",
+    "expo-media-library": "~15.2.3",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.18.0",
+    "nanoid": "^4.0.1",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-redux": "^8.0.5",
-    "react-native-maps": "1.3.2",
-    "expo-location": "~15.1.1",
-    "expo-camera": "~13.2.1",
-    "expo-media-library": "~15.2.3"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
