--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-camera": "~13.2.1",
     "expo-file-system": "^15.2.2",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-location": "~15.1.1",
     "expo-media-library": "~15.2.3",
     "expo-splash-screen": "~0.18.1",
